etg_derive/tests/cases/05_fail_on_struct_variant.stderr
error: expected unit variant
 --> tests/cases/05_fail_on_struct_variant.rs:6:5
  |
6 |     B { x: u32 },
  |     ^
