etg_derive/tests/cases/05_fail_on_struct_variant.rs
#[derive(etg_derive::Tags)]
enum E {
    #[serde(rename = "a")]
    A,
    #[serde(rename = "b")]
    B { x: u32 },
}

fn main() {}
